--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,6 @@ nav ul {
 }
 
 nav {
-  background-color: #CB9382;
   position: sticky;
     top: 0;
     width: 100%;
@@ -55,14 +54,17 @@ nav {
   width: 100%;
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .logo {
   display: inline-block;
-  color: #f9f9f9;
   font-size: 3rem;
   margin-left: 1.125rem;
   text-decoration: none;
-  max-width: 5
-  0px;
+  max-width: 100px;
+}
+
+header {
+  background-color: #CB9382;
 }
