--- a/css/main.css
+++ b/css/main.css
@@ -11,9 +11,13 @@ html {
 }
 
 body {
-    margin: 0;
-    font-family: "Adobe Caslon";
-    line-height: 1.5;
+  margin: 0;
+  font-family: "Adobe Caslon";
+  line-height: 1.5;
+}
+
+img {
+  width: 100%;
 }
 
 .logo {
@@ -66,7 +70,7 @@ nav {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-color: #A7C8EA;
+
 }
 
 .logo {
@@ -79,4 +83,14 @@ nav {
 
 header {
   background-color: #CB9382;
+}
+
+.left-ocean img {
+  width: 85%;
+}
+
+.right-ocean {
+  margin-right: 200px;
+  text-align: center;
+  background-color: #A7C8EA;
 }
