--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ html {
 
 html {
   font-size: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -34,6 +35,7 @@ ul {
 h1 {
   font-family: "Classico URW";
   font-weight: bold;
+  text-transform: uppercase;
 }
 
 h2 {
@@ -56,21 +58,37 @@ nav a {
   color: #FFFFFF;
   text-decoration: none;
   padding: 2em;
+  text-transform: uppercase;
 }
 
-nav {
-  position: sticky;
-    top: 0;
-    width: 100%;
-}
-
-.large-banner {
-  height: 90vh;
+.banner {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 2rem;
   width: 100%;
-  background-position: center;
-  background-size: cover;
+  height: 80vh;
+  background-color: #000;
   background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.banner img {
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+  display: flex;
+  align-content: center;
+}
+
+h1 {
+  font-weight: bold;
+  padding-left: 2rem;
+  grid-column: 1 / -1;
+  grid-row: 2;
+  text-transform: uppercase;
 }
 
 .logo {
@@ -78,19 +96,186 @@ nav {
   font-size: 3rem;
   margin-left: 1.125rem;
   text-decoration: none;
-  max-width: 100px;
+  max-width: 200px;
 }
 
-header {
+.nav {
   background-color: #CB9382;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  height: 70px;
+  justify-content: space-between;
 }
+
 
 .left-ocean img {
-  width: 85%;
+  max-width: 85%;
 }
 
 .right-ocean {
   margin-right: 200px;
   text-align: center;
   background-color: #A7C8EA;
+  display: block;
+  background-color: #A7C8EA;
+  max-width: 400px;
+  max-height: 400px;
+
+}
+
+.banner-ocean {
+  width: 100%;
+  height: 80vh;
+  background-color: #A7C8EA;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+}
+
+.right-honey {
+  margin-right: 200px;
+  text-align: center;
+  background-color: #F7C63C;
+  display: block;
+  background-color: #F7C63C;
+  max-width: 400px;
+  max-height: 400px;
+}
+
+.left-honey img{
+  max-width: 90%;
+}
+
+.split-banner {
+  width: 100%;
+  height: 80vh;
+  background-color: #F7C63C;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.bottom {
+  background-color: #A7C8EA;
+  margin: auto 0;
+  padding-bottom: 2em;
+  padding-top: 2em;
+}
+
+.about {
+  background-color: #EDE4DB;
+  margin: 0;
+  padding-top: 2em;
+  padding-bottom: 2em;
+}
+
+.products {
+  background-color: #F7C63C;
+  padding-top: 2em;
+  padding-bottom: 2em;
+}
+
+.products img {
+  border-left: 10px solid #EDE4DB;
+  border-right: 10px solid #EDE4DB;
+}
+
+.products h3 {
+  font-weight: bold;
+  text-align: center;
+}
+
+.products h2 {
+  text-transform: uppercase;
+}
+
+.accesories {
+  background-color: #EDE4DB;
+  padding: 2em;
+}
+
+.accesories h2 {
+  text-transform: uppercase;
+}
+
+.accesories h3 {
+  text-align: center;
+  font-weight: bold;
+}
+
+.faq {
+  background-color: #A7C8EA;
+  margin: 0;
+  padding-bottom: 2em;
+  padding-top: 2em;
+}
+
+.faq h2 {
+  color: #ffff;
+}
+
+div ul {
+  background-color: #CB9382;
+  margin: 1em;
+  border-radius: 20px;
+  padding: 2em;
+}
+
+li span {
+  color: #ffff;
+  font-size: 1.2rem;
+  margin-right: .5em;
+}
+
+.owners {
+  background-color: #EDE4DB;
+  padding-top: 20px;
+  padding-bottom: 20px
+}
+
+.contact-us {
+  color: #ffff;
+  background-color: #A7C8EA;
+  padding-top: 20px;
+}
+
+.contact-us img {
+  max-width: 30px;
+}
+
+.button {
+  background-color: #F7C63C;
+  border-radius: 20px;
+  margin: 10px 60px;
+  text-align: center;
+  padding: 1em 0;
+}
+
+.badges {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+}
+
+
+footer {
+  text-align: center;
+  background-color: #CB9382;
+  color: #ffff;
+  padding: 1em;
+}
+
+.wrapper {
+  margin-left: 1em;
+  margin-right: 1em;
 }
