--- a/css/main.css
+++ b/css/main.css
@@ -343,7 +343,7 @@ footer {
   margin-right: 1em;
 }
 
-@media only screen and (min-width: 38em) {
+@media only screen and (max-width: 600px) and (min-width: 400px) {
 
 .about-flex {
   display: flex;
