--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,10 @@ h2 {
   font-family: "Classico URW"
 }
 
+.banner h2 {
+  font-size: .85em;
+}
+
 .banner-ocean {
   display: flex;
   align-items: center;
@@ -128,19 +132,6 @@ nav a:hover {
   flex-direction: column;
   justify-content: center;
   width: 50%;
-}
-
-left-ocean-ocean {
-  width: 100%;
-  height: 80vh;
-  background-color: #A7C8EA;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
 }
 
 .left-honey {
@@ -343,8 +334,11 @@ footer {
   margin-right: 1em;
 }
 
-@media only screen and (max-width: 600px) and (min-width: 400px) {
+@media only screen and (min-width: 500px) and (max-width: 1100px){
 
+.banner h2 {
+  font-size: 2em;
+}
 .about-flex {
   display: flex;
   align-items: center;
@@ -420,7 +414,7 @@ nav a {
 }
 }
 
-@media only screen and (min-width: 70em) {
+@media only screen and (min-width: 1101px) {
 
 .question-grid {
     display: grid;
