--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,8 @@ nav a {
   text-decoration: none;
   text-transform: uppercase;
   margin: 0;
+  font-size: .75em;
+  padding-left: .25em;
 }
 
 nav a:hover {
@@ -184,6 +186,7 @@ nav a:hover {
 .products img {
   border-left: 10px solid #EDE4DB;
   border-right: 10px solid #EDE4DB;
+  flex-wrap: wrap;
 }
 
 .products h3 {
@@ -278,6 +281,11 @@ li span {
 
 .couple {
   border-radius: 50%;
+  min-width: 50%;
+}
+
+.owners-grid {
+  display: none;
 }
 
 .faq img {
@@ -332,6 +340,10 @@ footer {
 
 @media only screen and (min-width: 500px) and (max-width: 1100px){
 
+nav a {
+  font-size: 1em;
+}
+
 .banner h2 {
   font-size: 2em;
 }
@@ -380,7 +392,7 @@ footer {
 }
 
 .couple {
-  min-width: 30%;
+  width: 20%;
   padding-right: 1em;
 }
 
@@ -414,14 +426,54 @@ nav a {
 
 @media only screen and (min-width: 1101px){
 
+nav a {
+  font-size: 1em;
+  padding: 1.5em;
+}
+
+.logo {
+  width: 9%;
+}
+
+.about-flex {
+  display: flex;
+  align-items: center;
+}
+
+.about-flex img {
+  width: 250%;
+  margin-left: 1em;
+}
+
+.new-product-section {
+  display: flex;
+  align-items: center;
+}
+
+.new-product-section img {
+  width: 250%;
+  margin-right: 1em;
+}
+
+.key-ingredients {
+  display: flex;
+  align-items: center;
+}
+
+.key-ingredients img {
+  margin-left: 1em;
+}
+
 .question-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr
-  }
+  display: grid;
+  grid-template-columns: 1fr 1fr
+}
 
 .banner h2 {
   margin: 0;
   padding: 0;
+  font-size: 2em;
+  }
 }
 
 .banner h1 {
@@ -433,16 +485,37 @@ nav a {
 }
 
 .product-grid {
+  display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1em;
 }
 
 .accesories-grid {
+  display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1em;
 }
 
-nav a {
-  padding: 1.5em;
+.owners-grid {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.couple {
+  width: 30%;
+  padding-right: 1em;
+}
+
+.faq ul {
+  margin: 20px 80px;
+}
+
+.badges {
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+  padding: .4em;
+  max-width: 2000px;
 }
 }
