--- a/css/main.css
+++ b/css/main.css
@@ -73,10 +73,14 @@ nav a {
   margin: 0;
   font-size: .75em;
   padding-left: .25em;
+  transition-property: all;
+  transition-timing-function: ease;
+  transition-duration: .5s;
 }
 
 nav a:hover {
   color: #000;
+  background-color: #A7C8EA;
 }
 
 .banner {
