--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ html {
 
 body {
   margin: 0;
-  font-family: "Adobe Caslon";
+  font-family: "EB Garamond";
   line-height: 1.5;
 }
 
@@ -18,8 +18,6 @@ img {
 }
 
 .logo {
-  max-width: 200px;
-  max-height: 200px;
   min-width: 30px;
   min-height: 30px;
   display: inline-block;
@@ -189,6 +187,7 @@ nav a:hover {
 .new-product-section {
   display: flex;
   flex-direction: column;
+  padding-bottom: 1em;
 }
 
 .key-ingredients {
@@ -286,8 +285,16 @@ li span {
   background-color: #F7C63C;
   border-radius: 20px;
   text-align: center;
-  padding: .8em 0;
+  padding: 1.4em 5rem;
   margin: 1em 0;
+  max-width: 300px;
+}
+
+.yellow-buttons {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
 }
 
 .button a {
@@ -412,6 +419,7 @@ nav a {
 .new-product-section {
   flex-direction: row;
   align-items: center;
+  padding-bottom: 1em;
 }
 
 .new-product-image {
@@ -427,6 +435,10 @@ nav a {
 .ingredient-images {
   margin-left: 2em;
   min-width: 50%;
+}
+
+.ingredient-images :first-child {
+  padding-bottom: 1em;
 }
 
 .product-grid {
@@ -476,16 +488,23 @@ nav a {
   grid-template-columns: 1fr;
 }
 
+.button {
+  background-color: #F7C63C;
+  border-radius: 20px;
+  text-align: center;
+  padding: 1.4em 7rem;
+  margin: 1em 0;
+  max-width: 800px;
+}
+
 .logo-small {
   min-width: 20%;
   margin-right: 1em;
 }
 
 .logo {
-  max-width: 200px;
-  max-height: 200px;
   min-width: 60px;
-  min-height: 30px;
+  min-height: 60px;
 }
 }
 
@@ -497,7 +516,8 @@ nav a {
 }
 
 .logo {
-  width: 9%;
+  min-width: 90px;
+  min-height: 90px;
 }
 
 .about-flex {
@@ -512,6 +532,7 @@ nav a {
 .new-product-section {
   align-items: center;
   flex-direction: row;
+  padding-bottom: 2em;
 }
 
 .new-product-image {
@@ -526,6 +547,10 @@ nav a {
 .ingredient-images {
   margin-left: 3em;
   min-width: 50%;
+}
+
+.ingredient-images :first-child {
+  padding-bottom: 1em;
 }
 
 .question-grid {
@@ -574,6 +599,15 @@ nav a {
 .logo-small {
   max-width: 70%;
   margin-right: 1em;
+}
+
+.button {
+  background-color: #F7C63C;
+  border-radius: 20px;
+  text-align: center;
+  padding: 1.4em 10rem;
+  margin: 1em 0;
+  max-width: 800px;
 }
 
 .badges {
